--- a/app/src/main/res/layout/kohawk.xml
+++ b/app/src/main/res/layout/kohawk.xml
@@ -4,60 +4,77 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
+    android:background="@color/kohawkPrimary"
     tools:context="com.example.scott.appthemes.MainActivity">
 
-    <TextView
-        android:id="@+id/btnStandard"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Standard Theme"
-        android:textColor="@color/colorAccent"
-        android:textSize="24sp"
-        tools:layout_editor_absoluteX="104dp"
-        tools:layout_editor_absoluteY="61dp" />
+    <RelativeLayout
+        android:layout_width="298dp"
+        android:layout_height="447dp"
+        android:background="@color/kohawkPrimaryDark"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="148dp"
-        tools:layout_editor_absoluteY="216dp">
-
-        <Button
-            android:id="@+id/btnStandard"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@color/colorPrimary"
-            android:text="Standard"
-            android:textColor="@color/colorAccent" />
-
-        <Button
-            android:id="@+id/btnNature"
+        <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/naturePrimary"
-            android:text="Nature"
-            android:textColor="@color/natureAccent" />
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="71dp"
+            android:orientation="vertical"
+            tools:layout_editor_absoluteX="148dp"
+            tools:layout_editor_absoluteY="216dp">
 
-        <Button
-            android:id="@+id/btnFire"
+            <Button
+                android:id="@+id/btnStandard"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:background="#3F51B5"
+                android:text="Standard"
+                android:textColor="@color/colorAccent" />
+
+            <Button
+                android:id="@+id/btnNature"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:background="@color/naturePrimary"
+                android:text="Nature"
+                android:textColor="@color/natureAccent" />
+
+            <Button
+                android:id="@+id/btnFire"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:background="@color/firePrimary"
+                android:text="Fire"
+                android:textColor="@color/firePrimaryDark" />
+
+            <Button
+                android:id="@+id/btnKohawk"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_weight="1"
+                android:background="@color/kohawkPrimary"
+                android:text="Kohawk"
+                android:textColor="@color/kohawkPrimaryDark" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/txtThemeName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@color/firePrimary"
-            android:text="Fire"
-            android:textColor="@color/fireAccent" />
-
-        <Button
-            android:id="@+id/btnKohawk"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@color/kohawkPrimary"
-            android:text="Kohawk"
-            android:textColor="@color/kohawkPrimaryDark" />
-    </LinearLayout>
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="55dp"
+            android:text="Kohawk Theme"
+            android:textColor="@color/kohawkAccent"
+            android:textSize="24sp"
+            tools:layout_editor_absoluteX="104dp"
+            tools:layout_editor_absoluteY="61dp" />
+    </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
