--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3f51b5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#000000</color>
+    <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#FF4081</color>
     <color name="naturePrimary">#FF4BE148</color>
     <color name="naturePrimaryDark">#FF1E8B1C</color>
     <color name="natureAccent">#FF025807</color>
     <color name="firePrimary">#F70004</color>
-    <color name="firePrimaryDark">#FFF200</color>
-    <color name="fireAccent">#a47676</color>
-    <color name="kohawkPrimary">#940C12</color>
+    <color name="firePrimaryDark">#fff200</color>
+    <color name="fireAccent">#e49b1e</color>
+    <color name="kohawkPrimary">#940c12</color>
     <color name="kohawkPrimaryDark">#D49F54</color>
     <color name="kohawkAccent">#8B6D4C</color>
 </resources>
